@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/action.php,v 1.202 2008/05/18 00:02:19 gerundt Exp $
+ * $Header: /cvsroot/nocc/nocc/webmail/action.php,v 1.203 2008/06/22 12:43:11 goddess_skuld Exp $
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -59,9 +59,12 @@ switch($action) {
         $content = aff_mail($pop, $attach_tab, $_REQUEST['mail'], $_REQUEST['verbose'], $ev);
         // Display or hide distant HTML images
         if (!isset($_REQUEST['display_images']) || $_REQUEST['display_images'] != 1) {
-            $content['body'] = eregi_replace('src="[[:alpha:]]+://[^<>[:space:]]+[[:alnum:]/]"', 'src="none"', $content['body']);
-            $content['body'] = eregi_replace('src=[[:alpha:]]+://[^<>[:space:]]+[[:alnum:]/]', 'src="none"', $content['body']);
+            $content['body'] = eregi_replace('src="?[[:alpha:]]+://[^<>[:space:]]+[[:alnum:]/]"?', 'src="none"', $content['body']);
+            $content['body'] = eregi_replace('src[[:space:]]*=[[:space:]]*"?[[:space:]]*[[:alpha:]]+://[^<>[:space:]]+[[:alnum:]/][[:space:]]*"?', 'src="none"', $content['body']);
+            $content['body'] = eregi_replace('background="?[[:alpha:]]+://[^<>[:space:]]+[[:alnum:]/]"?', 'background="none"', $content['body']);
+            $content['body'] = eregi_replace('background[[:space:]]*=[[:space:]]*"?[[:space:]]*[[:alpha:]]+://[^<>[:space:]]+[[:alnum:]/][[:space:]]*"?', 'background="none"', $content['body']);
             $content['body'] = eregi_replace('url\([[:alpha:]]+://[^<>[:space:]]+[[:alnum:]/]\)', 'url(none)', $content['body']);
+            $content['body'] = eregi_replace('url[[:space:]]*\([[:space:]]*[[:alpha:]]+://[^<>[:space:]]+[[:alnum:]/][[:space:]]*\)', 'url(none)', $content['body']);
         }
         // Display embedded HTML images
         $tmp_attach_tab = $attach_tab;
